syntax = "proto3";

package ClassLibrary.Messages.Protobuf;

import "Common.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "ClassLibrary.Messages.Protobuf";

message CollisionCheck {
  string EntityId = 1; // UUIDs are represented as strings in Protobuf
  EntityType Entity = 2;
  ClassLibrary.Messages.Protobuf.Coordinates FromLocation = 3;
  ClassLibrary.Messages.Protobuf.Coordinates ToLocation = 4;
  double Timer = 5;
  string EventId = 6;
  ClassLibrary.Messages.Protobuf.Coordinates Direction = 7;
  google.protobuf.Timestamp GameTime = 8;
}

enum EntityType {
  Player = 0;
  Projectile = 1;
  Ai = 2;
}
